<resources>
    <string name="com.crashlytics.android.build_id">0180e1c3-679e-47b2-87c8-5b38929c4e13</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="a_location_will_be_allocated">A location will be allocated</string>
    <string name="abusive">Abusive</string>
    <string name="action_edit">Edit</string>
    <string name="action_post">Post</string>
    <string name="action_save">Save</string>
    <string name="action_scan_qr_code">Scan QR Code</string>
    <string name="action_scanned_qr_codes">Scanned QR Codes</string>
    <string name="action_settings">Settings</string>
    <string name="actionabar_button_events">Events</string>
    <string name="actionbar_action_contacts">Contacts</string>
    <string name="actionbar_action_save_note">Save Note</string>
    <string name="actionbar_action_send">Send</string>
    <string name="actionbar_button_login">Login</string>
    <string name="actionbar_buttons_my_profile">Profile</string>
    <string name="activity_stream_tab_title">Activity</string>
    <string name="activity_title_collect_debug_log">Send Debug Log</string>
    <string name="activity_title_network_testing">Perform Network Tests</string>
    <string name="activity_title_software_needed">Software Needed</string>
    <string name="address">Address</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="all_format">All %s</string>
    <string name="apply">Apply</string>
    <string name="authors">Authors</string>
    <string name="barcode_scanner_needed_display_blurb">"To display the barcode you need to download the 'Barcode Scanner' application from the Android Market.

Press the button below to go to Barcode Scanner's Market page"</string>
    <string name="barcode_scanner_needed_scan_blurb">"To scan barcodes you need to download the 'Barcode Scanner' application from Google Play.

Press the button below to go to Barcode Scanner's page"</string>
    <string name="beacon_scan_forever_summary">Check this if the beacon scan should run regardless of the event date</string>
    <string name="beacon_scan_forever_title">Always scan</string>
    <string name="beacon_scan_time_summary">The scan time in seconds</string>
    <string name="beacon_scan_time_title">Scan time</string>
    <string name="beacon_sleep_time_summary">The sleep time between scans in seconds</string>
    <string name="beacon_sleep_time_title">Sleep time</string>
    <string name="beacons">Beacons</string>
    <string name="contact_details_address">Address</string>
    <string name="contact_details_address_country">Country</string>
    <string name="contact_details_address_county">County</string>
    <string name="contact_details_address_line1">Address 1</string>
    <string name="contact_details_address_line2">Address 2</string>
    <string name="contact_details_address_line3">Address 3</string>
    <string name="contact_details_address_postcode">Postcode</string>
    <string name="contact_details_address_town">Town</string>
    <string name="contact_details_blog">Blog</string>
    <string name="contact_details_email">Email</string>
    <string name="contact_details_facebook">Facebook</string>
    <string name="contact_details_fax">Fax</string>
    <string name="contact_details_linkedin">LinkedIn</string>
    <string name="contact_details_organisation_company">Company</string>
    <string name="contact_details_organisation_department">Department</string>
    <string name="contact_details_organisation_title">Title</string>
    <string name="contact_details_telephone">Phone</string>
    <string name="contact_details_twitter">Twitter</string>
    <string name="contact_details_website">Website</string>
    <string name="contact_details_youtube">YouTube</string>
    <string name="content">Content</string>
    <string name="explicit">Explicit</string>
    <string name="focus">Focus</string>
    <string name="other">Other</string>
    <string name="preferences_label_wifi_information">WiFi Information</string>
    <string name="prefs_accounts_signin">Sign In</string>
    <string name="prefs_accounts_signout">Sign out</string>
    <string name="prefs_actions">Advanced</string>
    <string name="prefs_allow_push_summary">Allow the server to automatically push updates and notifications to the device</string>
    <string name="prefs_allow_push_title">Enable push messages</string>
    <string name="prefs_auto_update_summary">Periodically check and notify of updates</string>
    <string name="prefs_auto_update_title">Automatic updates</string>
    <string name="prefs_build">Build</string>
    <string name="prefs_check_title">Check for update now</string>
    <string name="prefs_data">Data</string>
    <string name="prefs_data_category">Event Data Updates</string>
    <string name="prefs_developer_category">Developer</string>
    <string name="prefs_enable_leds_summary">If enabled, the device will flash upon notification</string>
    <string name="prefs_enable_leds_title">Enable LEDs</string>
    <string name="prefs_enable_sounds_summary">If enabled, the device will make a sound upon notification</string>
    <string name="prefs_enable_sounds_title">Enable sounds</string>
    <string name="prefs_enable_vibration_summary">If enabled, the device will vibrate upon notification</string>
    <string name="prefs_enable_vibration_title">Enable vibration</string>
    <string name="prefs_info_build">Build</string>
    <string name="prefs_info_category">Application Information</string>
    <string name="prefs_last_checked_title">Last checked</string>
    <string name="prefs_network">Network</string>
    <string name="prefs_notifications_category">Notifications</string>
    <string name="prefs_prefered_language_title">Preferred Language</string>
    <string name="prefs_push_category">Push Messages</string>
    <string name="prefs_user_interface_category">User Interface Preferences</string>
    <string name="submit">Submit</string>
    <string name="type">Type</string>
    <string name="user">User</string>
    <string name="user_accounts">User Accounts</string>
    <string name="visitor_search_copy_default">Search for people using the options below</string>
    <string name="visitor_search_hint_company">Search by company name</string>
    <string name="visitor_search_hint_keyword">Search by keyword</string>
    <string name="visitor_search_hint_lastname">Search by last name</string>
    <string name="library_build">"Build: 3.9.4.1
Time: Thu, 7 Apr 2016 14:42:28 +0100"</string>
</resources>