<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/search_container" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/search_copy" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/visitor_search_copy_default" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <EditText android:id="@id/search_keyword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/visitor_search_hint_keyword" android:inputType="textImeMultiLine" android:imeOptions="actionSearch" />
        <EditText android:id="@id/search_lastname" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/visitor_search_hint_lastname" android:inputType="textImeMultiLine" android:imeOptions="actionSearch" />
        <EditText android:id="@id/search_company" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/visitor_search_hint_company" android:inputType="textImeMultiLine" android:imeOptions="actionSearch" />
    </LinearLayout>
</LinearLayout>